# botnet-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: botnet.cpp  botnet.hpp  main.cpp
src/botnet/: plugin.cpp  plugin.hpp
